# IPL-Live-Score

./: .gitignore  Makefile  README.md  extension.js  metadata.json  prefs.js
cinnamon-applet/ipl-live-score@amogh/: applet.js  metadata.json
cosmic-applet/: Cargo.toml
cosmic-applet/src/: main.rs
gnome-extension/: extension.js  metadata.json
kde-plasmoid/: metadata.json
kde-plasmoid/contents/ui/: main.qml
schemas/: org.gnome.shell.extensions.iplscore.gschema.xml
universal-script/: ipl_score.py
