[package]
name = "cosmic-applet-ipl-score"
version = "2.0.0"
edition = "2021"
description = "Live IPL cricket scores in your COSMIC desktop panel"
license = "MIT"

[dependencies]
cosmic-applet = "0.1"
cosmic-time = "0.4"
iced = { version = "0.12", features = ["tokio"] }
iced_runtime = "0.12"
tokio = { version = "1", features = ["full"] }
ureq = "2.9"
regex = "1.10"
once_cell = "1.19"
